<resources>
    <string name="app_name">Final - Mobile</string>
    <string name="app_logo">App Logo</string>
    <string name="username"><i>Username</i></string>
    <string name="password"><i>Password</i></string>
    <string name="re_enter_password"><i>Re-enter Password</i></string>
    <string name="forgot_password"><i><u>Forgot Password?</u></i></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or"><i>or</i></string>
    <string name="activities">Activities</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="_12_topics">12 Topics</string>
    <string name="checkin">Checkin</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="quizz">Quizz</string>
    <string name="progress">Progress</string>
    <string name="_1000">1000</string>
    <string name="already_known">Already Known</string>
    <string name="average_score">Average Score</string>
    <string name="find_a_word"><i>Find a word</i></string>
    <string name="english">English</string>
    <string name="_93">93</string>
    <string name="this_is_an_example_question_for_demo">This is an example question for Demo</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="_0_100">0/100</string>
    <string name="answer_d">Answer D</string>
    <string name="contribute_multiple_choices_q_a"><![CDATA[Contribute Multiple Choices Q&A]]></string>
    <string name="answer_and_tick_the_correct_answer">Answer and Tick the Correct Answer</string>
    <string name="enter_your_question">Enter your Question</string>
    <string name="question">Question</string>
    <string name="approve">Approve</string>
    <string name="notification">Notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_content_demo">This is an example of Noti content for Demo ^^~</string>
    <string name="my_profile">My Profile</string>
    <string name="upload_your_image">Upload your image</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="topic">Topic</string>
    <string name="me">Me</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="introduce">This application is developed by group 7 (Mobile Development)</string>
    <string name="activity">Activity</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="response_fail">Không thành công!</string>
    <string name="plus">+</string>
    <string name="you_have_finished">You have finished</string>
    <string name="yes">Yes</string>
    <string name="not_enough_infor">Thiếu thông tin</string>
    <string name="quiz_sound">Sound</string>
    <string name="favorite_vocab">Favorite Vocab</string>
</resources>