<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="361dp"
        android:layout_height="68dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/username"
        android:textColorHint="@color/gray_hint_color"
        android:textColor="@color/gray_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/password"
        android:textColorHint="@color/gray_hint_color"
        android:textColor="@color/gray_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

    <EditText
        android:id="@+id/edtReEnterPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/re_enter_password"
        android:textColor="@color/gray_hint_color"
        android:textColorHint="@color/gray_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtReEnterPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/horizontalLine1"
        android:layout_width="135dp"
        android:layout_height="1dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="200dp"
        android:background="@color/orange_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <View
        android:id="@+id/horizontalLine2"
        android:layout_width="135dp"
        android:layout_height="1dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="56dp"
        android:background="@color/orange_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="191dp"
        android:text="@string/or"
        android:textColor="@color/orange_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <ImageButton
        android:id="@+id/iBtnGoogleLogin"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine1"
        app:srcCompat="@drawable/google_login"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/iBtnFacebookLogin"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine2"
        app:srcCompat="@drawable/facebook_login"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/iBtnBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>