<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".login_register.MainActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="361dp"
        android:layout_height="68dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvUsername"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:strokeColor="@color/orange_line"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:background="@color/background_color"
            android:orientation="vertical">

            <EditText
                android:text="admin"
                android:id="@+id/edtUsername"
                android:layout_width="330dp"
                android:layout_height="30dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/avenir"
                android:gravity="left"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_hint_color"
                android:textSize="@dimen/answer_text_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvUsername"
        app:strokeColor="@color/orange_line"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:background="@color/background_color"
            android:orientation="vertical">

            <EditText
                android:inputType="textPassword"
                android:text="123456"
                android:id="@+id/edtPassword"
                android:layout_width="330dp"
                android:layout_height="30dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/avenir"
                android:gravity="left"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_hint_color"
                android:textSize="@dimen/answer_text_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/gray_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@null"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/horizontalLine1"
        android:layout_width="135dp"
        android:layout_height="1dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="200dp"
        android:background="@color/orange_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword" />

    <View
        android:id="@+id/horizontalLine2"
        android:layout_width="135dp"
        android:layout_height="1dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="56dp"
        android:background="@color/orange_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="191dp"
        android:text="@string/or"
        android:textColor="@color/orange_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword" />

    <com.google.android.gms.common.SignInButton
        android:layout_centerInParent="true"
        android:id="@+id/iBtnGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine1"
        app:srcCompat="@drawable/google_login"
        tools:ignore="SpeakableTextPresentCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>