<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".home.extra.MeActivity">

    <ImageButton
        android:id="@+id/iBtnBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/my_profile"
        android:fontFamily="@font/avenir"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivGirl"
        android:layout_width="@dimen/profile_pic_size"
        android:layout_height="@dimen/profile_pic_size"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/girl"
        app:civ_border="false"
        app:civ_shadow="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUserProfilePicture" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivBoy"
        android:layout_width="@dimen/profile_pic_size"
        android:layout_height="@dimen/profile_pic_size"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="150dp"
        android:src="@drawable/boy"
        app:civ_border="false"
        app:civ_shadow="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUserProfilePicture" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivUserProfilePicture"
        android:layout_width="@dimen/profile_pic_size"
        android:layout_height="@dimen/profile_pic_size"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/user"
        app:civ_border="false"
        app:civ_shadow="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:text="@string/upload_your_image"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:fontFamily="@font/avenir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMe" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/avenir"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUploadImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@null"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>