<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".home.notification.NotificationDetailActivity">

    <ImageButton
        android:id="@+id/iBtnBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/notification"
        android:fontFamily="@font/avenir"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAverageScore"
        android:layout_width="380dp"
        android:layout_height="380dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/dark_item"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNotification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNotificationContent"
                android:layout_width="330dp"
                android:layout_height="280dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/avenir"
                android:lineSpacingExtra="10dp"
                android:text="@string/notification_content_demo"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNotificationDetailTitle" />

            <TextView
                android:id="@+id/tvNotificationDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/avenir"
                android:text="@string/notification_title"
                android:textColor="@color/yellow"
                android:textStyle="italic"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/notification_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>